2008-07-08    <brolley@redhat.com>

	* stap-client (client_sysinfo): Use `uname -rvm`.
	(receive_response): Wait for "done:" from the server. Clear server_ip
	when the server is incompatible.
	* stap-server (check_request): Quote "`server_sysinfo`".
	(server_sysinfo): Use `uname -rvm`.
	(send_response): Send "done:".
	* stap-serverd (advertise_presence): Use `uname -rvm`. Quote "$txt".

2008-07-07  Mark Wielaard  <mwielaard@redhat.com>

	* stapex.5.in: Add section on installed examples, samples and demos
	and how they are documented.

2008-07-07  Mark Wielaard  <mwielaard@redhat.com>

	* Makefile.am (install-data-hook): Install examples, demos and
	samples.
	(uninstall-local): Remove examples, demos and samples.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* systemtap.spec.in (%install): Move examples.
	Don't copy over examples to src.
	(testsuite): Don't include src/examples.

2008-07-07  Mark Wielaard  <mwielaard@redhat.com>

	* systemtap.spec.in (%install): Move installed pdf files.
	(%files): Mark moved installed pdf as %doc files.

2008-07-03  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (translate_pass): Don't #include <linux/compile.h>.

2008-07-03    <brolley@redhat.com>

	* stap-serverd: New script.
	* stap-client (client_sysinfo): Client sysinfo is stripped down to
	the output of `uname -r` for now.
	(package_request): Don't create temporary server tar file here.
	(send_request): Communication protocol simplified. Use nc to send
	the tar file.
	(receive_response): Communication protocol eliminated. Simply wait
	for the file from the server using nc.
	(unpack_response): Create temporary server tar file here. Verify the
	contents of the server's response.
	(find_and_connect_to_server): Obtain server address and port from
	avahi-browse.
	(server_fatal): New function.
	(check_server_error): Call server_fatal.
	* stap-server (configuration): port is now provided as an argument.
	Default to port 65001.